# OpenWinControlsCLI

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  rolling_release.yml
linux/appimage/: org.owc.openwincontrolscli.appdata.xml  org.owc.openwincontrolscli.desktop
src/: Utils.cpp  Utils.h  main.cpp
src/classes/: CMDParser.cpp  CMDParser.h  FileLogger.cpp  FileLogger.h
src/include/: win.h
src/resources/: version.h.in  win.rc.in
